[project]
name = "snomedct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jan Ole Bangen", email = "Jan.Bangen@uib.no" }
]
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "cattrs>=25.1.1",
    "polars>=1.31.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.0",
]

[project.scripts]
snomedct = "snomedct.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length=120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
       "I001", # Using isort for ordering and ruff doesn't seem completely content with it
       ]

[tool.isort]
profile="black"
